email request added

--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ JWT_SECRET="jigmatdorjey"
 CLOUDINARY_API_KEY= "726348273861667"
 CLOUDINARY_SECRET_KEY= "KVrDPJ5tUW5pS96xHidLxXsrx2I"
 CLOUDINARY_NAME = "dtmipoziv"
+
+
+
+SMTP_USER='884246001@smtp-brevo.com'
+SMTP_PASS='TavhgB50nFpwcr6E'
+
+SENDER_EMAIL='jigmatdorjey255@gmail.com'
